# agentic-rag

./: .gitignore  README.md  agentic_rag.py  app.py  demo.py  hello.py  load_documents.py  multi_agent.py  pyproject.toml  rag.py  requirements.txt  retriever.py  streamlit_app.py  web_search.py
scripts/: smaller_med.py
src/: common.py  load_documents.py  prompts.py  rag.py  web_search.py
